# Zwsam

./: .gitignore  GUIDE-FA.md  README.md  build.bat  build.sh
.github/workflows/: deploy.yml
wasm-core/: Cargo.toml
wasm-core/src/: bytes.rs  dns.rs  lib.rs  uuid.rs  vless.rs
worker/: package.json  wrangler.toml
worker/scripts/: validate.js
worker/src/: index.js
