[package]
name = "zeus-wasm-core"
version = "1.0.0"
edition = "2021"
description = "High-performance WASM core for Zeus VLESS proxy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "TextEncoder",
    "TextDecoder",
] }
urlencoding = "2"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
